// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimelineItem renders as expected 1`] = `
<div>
  <div
    class="intersectionDate"
    role="presentation"
    style="height: 5px; top: 21px;"
  />
  <div
    class="undefined"
    role="presentation"
  />
  <div
    class="undefined"
    role="presentation"
  />
</div>
`;

exports[`TimelineItem renders as expected with data point starting after Timeline start date 1`] = `
<div>
  <div
    class="intersectionDate"
    role="presentation"
    style="height: 5px; top: 21px;"
  />
</div>
`;
